[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts/Teletactile-3zavL.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/48_8_black.png" type="Texture" id=3]
[ext_resource path="res://Scripts/World.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/48_8_white.png" type="Texture" id=6]
[ext_resource path="res://Sprites/120_8_white.png" type="Texture" id=7]
[ext_resource path="res://Sprites/120_8_black.png" type="Texture" id=8]
[ext_resource path="res://Sprites/tilemap_reduced.png" type="Texture" id=9]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=9]
0/name = "tilemap_reduced.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 8 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [ Vector2( 0, 0 ), SubResource( 1 ), Vector2( 1, 0 ), SubResource( 2 ) ]
0/autotile/priority_map = [ Vector3( 0, 0, 14 ) ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tilemap_reduced.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 8, 80, 8 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 8, 8 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilemap_reduced.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 16, 32, 8 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 8, 8 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tilemap_reduced.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 16, 40, 8 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 8, 8 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=10]
size = 7
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 10
font_data = ExtResource( 2 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap1" type="TileMap" parent="Navigation2D"]
tile_set = SubResource( 9 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 65536, 1, 0, 65537, 1, 1, 65538, 1, 1, 65539, 1, 1, 65540, 1, 1, 65541, 1, 1, 65542, 1, 1, 65543, 1, 1, 65544, 1, 1, 65545, 1, 1, 65546, 1, 3, 65547, 1, 0, 65548, 1, 1, 65549, 1, 1, 65550, 1, 1, 65551, 1, 1, 65552, 1, 1, 65553, 1, 1, 65554, 1, 1, 65555, 1, 1, 65556, 1, 1, 65557, 1, 1, 65558, 1, 1, 65559, 1, 1, 65560, 1, 1, 65561, 1, 3, 65562, 1, 0, 65563, 1, 1, 65564, 1, 1, 65565, 1, 3, 131072, 1, 4, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 1, 131081, 0, 0, 131082, 1, 4, 131083, 1, 4, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 1, 6, 131098, 1, 9, 131099, 0, 1, 131100, 0, 0, 131101, 1, 4, 196608, 1, 4, 196609, 0, 1, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 1, 6, 196619, 1, 9, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 1, 0, 196624, 1, 1, 196625, 1, 3, 196626, 0, 0, 196627, 1, 0, 196628, 1, 1, 196629, 1, 3, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 1, 4, 262144, 1, 4, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 1, 0, 262149, 1, 1, 262150, 1, 1, 262151, 1, 3, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 1, 4, 262160, 1, 0, 262161, 1, 9, 262162, 0, 0, 262163, 1, 6, 262164, 1, 3, 262165, 1, 4, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 1, 4, 327680, 1, 4, 327681, 0, 0, 327682, 0, 1, 327683, 0, 0, 327684, 1, 6, 327685, 1, 1, 327686, 1, 1, 327687, 1, 1, 327688, 1, 1, 327689, 1, 1, 327690, 1, 1, 327691, 1, 1, 327692, 1, 3, 327693, 0, 0, 327694, 0, 0, 327695, 1, 4, 327696, 1, 4, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 1, 4, 327701, 1, 4, 327702, 0, 0, 327703, 1, 0, 327704, 1, 1, 327705, 1, 1, 327706, 0, 0, 327707, 1, 1, 327708, 1, 1, 327709, 1, 4, 393216, 1, 4, 393217, 0, 1, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 1, 4, 393224, 1, 0, 393225, 1, 1, 393226, 1, 1, 393227, 1, 1, 393228, 1, 9, 393229, 0, 0, 393230, 0, 0, 393231, 1, 6, 393232, 1, 9, 393233, 0, 1, 393234, 0, 0, 393235, 0, 0, 393236, 1, 4, 393237, 1, 4, 393238, 0, 0, 393239, 1, 4, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 1, 0, 393245, 1, 9, 458752, 1, 6, 458753, 1, 1, 458754, 1, 3, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 1, 4, 458760, 1, 4, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 1, 4, 458773, 1, 4, 458774, 0, 0, 458775, 1, 4, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 1, 458780, 1, 6, 458781, 1, 3, 524288, 3, 0, 524289, 3, 1, 524290, 1, 4, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 1, 6, 524296, 1, 9, 524297, 0, 1, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 1, 4, 524303, 0, 0, 524304, 0, 0, 524305, 1, 0, 524306, 1, 3, 524307, 0, 0, 524308, 1, 6, 524309, 1, 9, 524310, 0, 0, 524311, 1, 6, 524312, 0, 0, 524313, 1, 1, 524314, 1, 1, 524315, 1, 1, 524316, 1, 1, 524317, 1, 4, 589824, 3, 1, 589825, 3, 3, 589826, 1, 4, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 1, 0, 589837, 1, 1, 589838, 1, 9, 589839, 0, 0, 589840, 0, 0, 589841, 1, 6, 589842, 1, 9, 589843, 0, 0, 589844, 0, 0, 589845, 0, 1, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 1, 4, 655360, 3, 4, 655361, 3, 1, 655362, 1, 4, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 1, 4, 655373, 0, 1, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 1, 4, 720896, 1, 0, 720897, 1, 1, 720898, 1, 9, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 1, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 1, 4, 720909, 0, 0, 720910, 0, 0, 720911, 1, 0, 720912, 1, 1, 720913, 1, 1, 720914, 1, 1, 720915, 1, 3, 720916, 0, 0, 720917, 0, 0, 720918, 1, 0, 720919, 1, 3, 720920, 0, 0, 720921, 1, 0, 720922, 1, 1, 720923, 1, 3, 720924, 0, 0, 720925, 1, 4, 786432, 1, 4, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 1, 786437, 0, 0, 786438, 1, 0, 786439, 1, 1, 786440, 1, 1, 786441, 1, 3, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 1, 4, 786448, 3, 0, 786449, 3, 0, 786450, 3, 1, 786451, 1, 4, 786452, 0, 0, 786453, 0, 0, 786454, 1, 6, 786455, 1, 9, 786456, 0, 0, 786457, 1, 6, 786458, 1, 1, 786459, 1, 9, 786460, 0, 0, 786461, 1, 4, 851968, 1, 4, 851969, 0, 1, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 1, 6, 851975, 1, 1, 851976, 1, 1, 851977, 1, 9, 851978, 0, 0, 851979, 0, 0, 851980, 1, 4, 851981, 0, 0, 851982, 0, 0, 851983, 1, 4, 851984, 3, 4, 851985, 3, 3, 851986, 3, 0, 851987, 1, 4, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 1, 4, 917504, 1, 4, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 1, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 1, 4, 917517, 0, 0, 917518, 0, 0, 917519, 1, 6, 917520, 1, 1, 917521, 1, 3, 917522, 3, 2, 917523, 1, 4, 917524, 0, 0, 917525, 0, 0, 917526, 1, 0, 917527, 1, 1, 917528, 1, 1, 917529, 1, 3, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 1, 4, 983040, 1, 4, 983041, 0, 0, 983042, 0, 0, 983043, 1, 0, 983044, 1, 3, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 1, 4, 983053, 0, 0, 983054, 0, 1, 983055, 0, 0, 983056, 0, 0, 983057, 1, 4, 983058, 3, 0, 983059, 1, 4, 983060, 0, 0, 983061, 0, 0, 983062, 1, 4, 983063, 3, 3, 983064, 1, 0, 983065, 1, 9, 983066, 0, 1, 983067, 0, 0, 983068, 0, 0, 983069, 1, 4, 1048576, 1, 4, 1048577, 0, 0, 1048578, 0, 0, 1048579, 1, 6, 1048580, 1, 9, 1048581, 0, 0, 1048582, 0, 0, 1048583, 1, 0, 1048584, 1, 1, 1048585, 0, 0, 1048586, 0, 0, 1048587, 1, 1, 1048588, 1, 1, 1048589, 1, 1, 1048590, 1, 3, 1048591, 0, 0, 1048592, 0, 0, 1048593, 1, 6, 1048594, 1, 1, 1048595, 1, 9, 1048596, 0, 0, 1048597, 0, 0, 1048598, 1, 6, 1048599, 1, 1, 1048600, 1, 9, 1048601, 0, 0, 1048602, 0, 0, 1048603, 1, 0, 1048604, 1, 1, 1048605, 1, 9, 1114112, 1, 4, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 1, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 1, 4, 1114120, 0, 0, 1114121, 0, 1, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 1, 4, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 1, 4, 1114140, 3, 4, 1114141, 3, 2, 1179648, 1, 4, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 1, 1179655, 1, 4, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 1, 4, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 1, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 1, 0, 1179674, 1, 1, 1179675, 1, 9, 1179676, 3, 2, 1179677, 3, 1, 1245184, 1, 6, 1245185, 1, 1, 1245186, 1, 1, 1245187, 1, 1, 1245188, 1, 1, 1245189, 1, 1, 1245190, 1, 1, 1245191, 1, 1, 1245192, 1, 1, 1245193, 1, 1, 1245194, 1, 1, 1245195, 1, 1, 1245196, 1, 1, 1245197, 1, 1, 1245198, 1, 1, 1245199, 1, 1, 1245200, 1, 1, 1245201, 1, 1, 1245202, 1, 1, 1245203, 1, 1, 1245204, 1, 1, 1245205, 1, 1, 1245206, 1, 1, 1245207, 1, 1, 1245208, 1, 1, 1245209, 1, 9, 1245210, 3, 2, 1245211, 3, 4, 1245212, 3, 4, 1245213, 3, 2 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 16, 24 )

[node name="Monsters" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TopUI" type="ColorRect" parent="CanvasLayer"]
margin_right = 240.0
margin_bottom = 8.0
color = Color( 0.180392, 0.180392, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="CanvasLayer/TopUI"]
margin_right = 56.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 10 )
text = "LEVEL 1"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortalBar" type="TextureProgress" parent="CanvasLayer/TopUI"]
margin_left = 60.0
margin_right = 180.0
margin_bottom = 8.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
tint_progress = Color( 0, 0.360784, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterBar" type="TextureProgress" parent="CanvasLayer/TopUI"]
margin_left = 188.0
margin_right = 236.0
margin_bottom = 8.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.662745, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortalBarTween" type="Tween" parent="CanvasLayer/TopUI"]

[node name="MonsterBarTween" type="Tween" parent="CanvasLayer/TopUI"]

[node name="LevelStartUI" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.8 )
margin_left = 64.0
margin_top = 48.0
margin_right = 176.0
margin_bottom = 112.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect" type="ColorRect" parent="CanvasLayer/LevelStartUI"]
margin_left = 2.0
margin_top = 2.0
margin_right = 110.0
margin_bottom = 62.0
color = Color( 0.180392, 0.180392, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/LevelStartUI/Rect"]
margin_left = 14.0
margin_top = 22.0
margin_right = 94.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 11 )
text = "Level 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelStartTimer" type="Timer" parent="CanvasLayer/LevelStartUI/Rect"]

[node name="LevelStartTween" type="Tween" parent="CanvasLayer/LevelStartUI/Rect"]

[connection signal="tween_completed" from="CanvasLayer/TopUI/PortalBarTween" to="." method="_on_PortalBarTween_tween_completed"]
[connection signal="tween_completed" from="CanvasLayer/TopUI/MonsterBarTween" to="." method="_on_MonsterBarTween_tween_completed"]
[connection signal="timeout" from="CanvasLayer/LevelStartUI/Rect/LevelStartTimer" to="." method="_on_LevelStartTimer_timeout"]
